apps/emby/k8s.np.media-default-deny.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-default-deny
  namespace: media
spec:
  endpointSelector: {}  # Empty selector = matches ALL pods in this namespace
  ingress: []
  egress: []
