apps/emby/k8s.np.restart-deployment.yaml
---
# Network Policy for restart-deployment CronJob
# Allows the CronJob to access DNS and Kubernetes API
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: restart-deployment-emby
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: restart-deployment-emby
  egress:
  # Allow DNS resolution via CoreDNS
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  # Allow Kubernetes API access to restart deployment
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: '6443'
        protocol: TCP
      - port: '443'
        protocol: TCP
